2003-03-12  Bradley Bell  <bradleyb@smeagol>

	* main/game.c, main/game.h, main/inferno.c: added -maxfps option

2003-03-12  Bradley Bell  <btb@icculus.org>

	* arch/linux/alsadigi.c, arch/linux/findfile.c,
	arch/linux/hmiplay.c, arch/linux/init.c, arch/linux/ipx_bsd.c,
	arch/linux/ipx_kali.c, arch/linux/ipx_lin.c, arch/linux/ipx_udp.c,
	arch/linux/joydefs.c, arch/linux/ukali.c, arch/linux/include,
	arch/linux/include/ipx_bsd.h, arch/linux/include/ipx_drv.h,
	arch/linux/include/ipx_hlpr.h, arch/linux/include/ipx_kali.h,
	arch/linux/include/ipx_ld.h, arch/linux/include/ipx_lin.h,
	arch/linux/include/ipx_udp.h, arch/linux/include/joystick.h,
	arch/linux/include/music.h, arch/linux/include/serial.h,
	arch/linux/include/ukali.h: formatting

2003-03-11  Chris Arena <ccarena@cox.net>

	* main/menu.c (do_options_menu): fixed brightness slider

2003-03-01  Bradley Bell  <btb@icculus.org>

	* main/piggy.c, main/titles.c: d1 briefing text fixed, spinning
	robots and animated bitmaps work, but colors are messed up

2003-02-28  Bradley Bell  <btb@icculus.org>

	* main/player.h: whitespace

	* main/automap.c, main/cntrlcen.c, main/collide.c,
	main/gamerend.c: use Builtin_mission_num instead of 0 (if
	descent.hog is present, d1 becomes mission 0)

	* configure.ac, arch/win32/Makefile.am, arch/win32/ipx_drv.h,
	arch/win32/ipx_win.c, arch/win32/mingw_init.c,
	arch/win32/winnet.c: MinGW compiles with network enabled again,
	but still doesn't work

	* NEWS: Updated

2003-02-28  Bradley Bell  <btb@icculus.org>

	* 2d/pcx.c, arch/ogl/gr.c, libmve/mveplay.c, main/gameseq.c,
	main/inferno.c, main/menu.c, main/movie.c, main/newmenu.c: Fixed
	many opengl glitches

2003-02-27  Bradley Bell  <btb@icculus.org>

	* main/Makefile.am, main/gamesave.c, main/hoard.c, main/hoard.h,
	main/inferno.c, main/menu.c, main/mission.c, main/mission.h,
	main/network.c, main/network.h: noted that hoard.ham is only needed
	for multiplayer HOARD games, and should not be equated with