@@ -1,4 +1,4 @@
-/* $Id: gamecntl.c,v 1.14 2003-01-15 02:42:41 btb Exp $ */
+/* $Id: gamecntl.c,v 1.15 2003-03-13 22:34:58 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -1389,12 +1389,12 @@ int HandleSystemKey(int key)
 		#endif
 
 //added 8/23/99 by Matt Mueller for hot key res/fullscreen changing, and menu access
-#if 0
 		case KEY_CTRLED+KEY_SHIFTED+KEY_PADDIVIDE:
 		case KEY_ALTED+KEY_CTRLED+KEY_PADDIVIDE:
 		case KEY_ALTED+KEY_SHIFTED+KEY_PADDIVIDE:
-			d1x_options_menu();
+			d2x_options_menu();
 			break;
+#if 0
 		case KEY_CTRLED+KEY_SHIFTED+KEY_PADMULTIPLY:
 		case KEY_ALTED+KEY_CTRLED+KEY_PADMULTIPLY:
 		case KEY_ALTED+KEY_SHIFTED+KEY_PADMULTIPLY:
